Styled Dice game

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
+    <section class="dice-game">
+      <div class="dice-message" id="dice-message">
+        <h1>You rolled: three</h1>
+      </div>
+      <div class="dice-face" id="dice-face">
+        <img src="img/dice3.svg" alt="three">
+      </div>
+      <button type="button" name="roll" class="btn" id="btn">Roll the dice</button>
+    </section>
+
+
+
 
     <!--
       Step 1: Build the HTML/CSS Prototype to look like this:
